# lab03-uml-relationships-alpha

./: Asientos.cpp  Asientos.h  Bus.cpp  Bus.h  CMakeLists.txt  Conductor.cpp  Conductor.h  Hora.cpp  Hora.h  Horario.cpp  Horario.h  Lineas.cpp  Lineas.h  ObjetoBase.cpp  ObjetoBase.h  Paradas.cpp  Paradas.h  Pasajero.cpp  Pasajero.h  Persona.cpp  Persona.h  README.md  Ruta.cpp  Ruta.h  Source.cpp  Tiquete.cpp  Tiquete.h  TransportePublico.cpp  TransportePublico.h  Tren.cpp  Tren.h  Vehiculo.cpp  Vehiculo.h  main.cpp
.run/: Alpha.run.xml
diagram/: Paso a leer grupo Alpha.rtf  Tranaporte.uxf
